# hikvision-camera-bot

./: .dockerignore  .env  .gitignore  CHANGELOG.json  Dockerfile  LICENSE  README.md  bot.py  camerabot.py  config-template.json  config.default.json  config.json  docker-compose.yml  encoding_templates-template.json  livestream_templates-template.json  livestream_templates_template.json  pyproject.toml  requirements.txt
camerabot/: alarm.py  api.py  cam_logger.py  camera.py  camerabot.py  config.py  constants.py  directorywatcher.py  error.py  errors.py  exceptions.py  homecam.py  livestream.py  service.py  utils.py
configs/: config-template.json  encoding_templates-template.json  livestream_templates-template.json
hikcamerabot/: alarm.py  api.py  bot_setup.py  callbacks.py  camera.py  camerabot.py  commands.py  commons.py  config.py  constants.py  decorators.py  directorywatcher.py  enums.py  exceptions.py  launcher.py  livestream.py  processes.py  registry.py  service.py  setup.py  types.py  utils.py
hikcamerabot/callbacks/: callbacks.py  helpers.py
hikcamerabot/clients/: hikvision.py
hikcamerabot/config/: _types.py  _validators.py  config.py  env_settings.py
hikcamerabot/core/: api.py
hikcamerabot/dispatchers/: abstract.py  event_result.py  event_task.py  events.py
hikcamerabot/event_engine/: queue.py
hikcamerabot/handlers/: __init__.py  event_result.py  (+2 more)
releases/: release_1.3.md  release_1.4.md  release_1.5.2.md  release_1.5.md  release_1.6.md  release_1.7.md  release_1.8.md  release_1.9.md  release_2.0.md
srs_prod/: Dockerfile  hik-docker.conf
(+99 files in other folders)
